--- a/guess_num.html
+++ b/guess_num.html
@@ -6,26 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess Number Game</title>
-    <link href="guess_num.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <div id="game_box">
+    <main id="game_box">
         <h1>Number guessing game</h1>
         <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell
             you if your guess was too high or too low.</p>
         <form class="form">
-            <input type="number" placeholder="get me some Number" min="1" max='100' class="number_box" id="number_box"
-                required>
-            <button type="submit" value="Submit guess" class="enter" id="enter">Enter</button>
+            <input type="number" placeholder="get me some Number" min="1" max='100' class="number_box"  required>
+            <button type="submit" value="Submit guess" class="enter">Enter</button>
         </form>
-        <div class="resultParas">
+        <div class="result">
             <p class="guesses"></p>
             <p class="lastResult"></p>
-            <p class="lowOrHi"></p>
+            <p class="range"></p>
         </div>
-    </div>
-    <script src="guess_num.js"></script>
+    </main>
+    <script src="main.js"></script>
 </body>
 
 </html>
