--- a/guess_num.html
+++ b/guess_num.html
@@ -12,7 +12,7 @@
 <body>
     <main id="game_box">
         <h1>Number guessing game</h1>
-        <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell
+        <p class="rule">We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell
             you if your guess was too high or too low.</p>
         <form class="form">
             <input type="number" placeholder="get me some Number" min="1" max='100' class="number_box"  required>
