--- a/guess_num.html
+++ b/guess_num.html
@@ -13,7 +13,7 @@
     <main id="game_box">
         <h1>Number guessing game</h1>
         <p class="rule">We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell
-            you if your guess was too high or too low.</p>
+            you if your guess was range.</p>
         <form class="form">
             <input type="number" placeholder="get me some Number" min="1" max='100' class="number_box"  required>
             <button type="submit" value="Submit guess" class="enter">Enter</button>
